fix(css): apply letterSpacing and wordSpacing

--- a/KMReader/ReadiumCSS/KMReadiumCSS-after-rtl.css
+++ b/KMReader/ReadiumCSS/KMReadiumCSS-after-rtl.css
@@ -646,6 +646,47 @@ body {
 }
 
 /* Readium CSS
+   Word spacing pref
+
+   A submodule managing word-spacing for user settings
+   Part of “User Overrides Advanced” class – “advanced settings” flag required.
+
+   Repo: https://github.com/readium/readium-css */
+
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] h1,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] h2,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] h3,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] h4,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] h5,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] h6,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] p,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] li,
+:root[style*="readium-advanced-on"][style*="--USER__wordSpacing"] div {
+  word-spacing: var(--USER__wordSpacing);
+}
+
+/* Readium CSS
+   Letter spacing pref
+
+   A submodule managing letter-spacing for user settings
+   Part of “User Overrides Advanced” class – “advanced settings” flag required.
+
+   Repo: https://github.com/readium/readium-css */
+
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] h1,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] h2,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] h3,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] h4,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] h5,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] h6,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] p,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] li,
+:root[style*="readium-advanced-on"][style*="--USER__letterSpacing"] div {
+  letter-spacing: var(--USER__letterSpacing);
+  font-variant: none;
+}
+
+/* Readium CSS
    Ligatures pref
 
    A submodule managing ligatures for user settings in the Arabic Script (can help with a11y)
